--- a/.github/workflows/hosting-test.yml
+++ b/.github/workflows/hosting-test.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Prepare Clean Distribution
         env:
           AIS_KEY: ${{ secrets.AISSTREAM_API_KEY }}
+          NPT_USER: ${{ secrets.NPT_USER }}
+          NPT_PASS: ${{ secrets.NPT_PASS }}
           RUN_ID: ${{ github.run_id }}
         run: |
           mkdir dist
@@ -44,33 +46,47 @@ jobs:
           with open(filename, 'r') as f:
               content = f.read()
           
-          # 1. Check for Secret (Strict Mode)
-          api_key = os.environ.get(\"AIS_KEY\", \"\").strip()
-          if not api_key or len(api_key) < 10:
-              print('!! FATAL ERROR: AISSTREAM_API_KEY is missing or too short !!')
-              print('Please check your GitHub Repository Secrets.')
+          def get_secret(name):
+              val = os.environ.get(name, \"\").strip()
+              print(f\"DEBUG: {name} exists={bool(val)}, Length={len(val)}\")
+              return val
+          
+          ais_key = get_secret(\"AIS_KEY\")
+          npt_user = get_secret(\"NPT_USER\")
+          npt_pass = get_secret(\"NPT_PASS\")
+          
+          if not ais_key:
+              print('!! FATAL ERROR: AISSTREAM_API_KEY is missing !!')
               exit(1)
           
           # 2. Inject the Variable
           marker = '<!--INJECT_AIS_CONFIG_SURGICAL-->'
-          real_config = f'<script>window.LOCAL_CONFIG = {{ AISSTREAM_API_KEY: \"{api_key}\", FERRY_MMSI: \"238690000\", ENABLE_REAL_AIS: true, urls: {{ npt: \"https://b2b.promet-info.hr\" }} }}; console.info(\"🚢 Real-Time AIS Config Injected (v2.2.0)\");</script>'
+          config_payload = {
+              \"AISSTREAM_API_KEY\": ais_key,
+              \"nptUser\": npt_user,
+              \"nptPass\": npt_pass,
+              \"FERRY_MMSI\": \"238690000\",
+              \"ENABLE_REAL_AIS\": True,
+              \"urls\": { \"npt\": \"https://b2b.promet-info.hr\" }
+          }
+          
+          import json
+          js_config = f'<script>window.LOCAL_CONFIG = {json.dumps(config_payload)}; console.info(\"🚢 System Config Injected (v2.3.0)\");</script>'
           
           if marker in content:
-              print(f'✓ Marker found. Injecting secret...')
-              content = content.replace(marker, real_config)
-              # Create a unique token for this specific run
-              run_token = f'RUN_{os.environ.get(\"RUN_ID\", \"UNK\")[0:5]}'
+              print(f'✓ Marker found. Injecting all secrets...')
+              content = content.replace(marker, js_config)
+              run_token = f'RUN_{os.environ.get(\"RUN_ID\", \"UNK\")[-5:]}'
               content = content.replace('TOKEN_PLACEHOLDER', run_token)
               
               with open(filename, 'w') as f:
                   f.write(content)
                   f.flush()
                   os.fsync(f.fileno())
-              print(f'✓ Injection successful (Token: {run_token})')
+              print(f'✓ Write successful. Token: {run_token}')
           else:
               print(f'!! FATAL ERROR: Marker {marker} NOT found !!')
               exit(1)
-          print('--- GITHUB ACTION DEBUG END ---')
           print('--- GITHUB ACTION DEBUG END ---')
           "
           touch dist/.nojekyll
