--- a/.github/workflows/hosting-test.yml
+++ b/.github/workflows/hosting-test.yml
@@ -52,30 +52,34 @@ jobs:
               return val
           
           ais_key = get_secret(\"AIS_KEY\")
-          npt_user = get_secret(\"NPT_USER\")
-          npt_pass = get_secret(\"NPT_PASS\")
-          
           if not ais_key:
               print('!! FATAL ERROR: AISSTREAM_API_KEY is missing !!')
               exit(1)
           
           # 2. Inject the Variable
+          # We search for the marker AND the fallback line to replace them both in one block
           marker = '<!--INJECT_AIS_CONFIG_SURGICAL-->'
+          fallback_line = 'window.LOCAL_CONFIG = window.LOCAL_CONFIG || { ENABLE_REAL_AIS: false };'
+          
           config_payload = {
               \"AISSTREAM_API_KEY\": ais_key,
-              \"nptUser\": npt_user,
-              \"nptPass\": npt_pass,
+              \"nptUser\": get_secret(\"NPT_USER\"),
+              \"nptPass\": get_secret(\"NPT_PASS\"),
               \"FERRY_MMSI\": \"238690000\",
               \"ENABLE_REAL_AIS\": True,
               \"urls\": { \"npt\": \"https://b2b.promet-info.hr\" }
           }
           
           import json
-          js_config = f'<script>window.LOCAL_CONFIG = {json.dumps(config_payload)}; console.info(\"🚢 System Config Injected (v2.3.0)\");</script>'
+          js_config = f'<script>window.LOCAL_CONFIG = {json.dumps(config_payload)}; console.info(\"🚢 System Config Injected (v2.3.1)\");</script>'
           
           if marker in content:
-              print(f'✓ Marker found. Injecting all secrets...')
+              print(f'✓ Marker found. Injecting...')
+              # Replace the marker and the fallback line with our real config
               content = content.replace(marker, js_config)
+              # Remove the fallback line so it doesn't execute
+              content = content.replace(fallback_line, \"// Fallback overridden by production injection\")
+              
               run_token = f'RUN_{os.environ.get(\"RUN_ID\", \"UNK\")[-5:]}'
               content = content.replace('TOKEN_PLACEHOLDER', run_token)
               
