--- a/.github/workflows/hosting-test.yml
+++ b/.github/workflows/hosting-test.yml
@@ -49,20 +49,21 @@ jobs:
           run_id = os.environ.get('RUN_ID', 'UNK')
           ais_key = os.environ.get('AIS_KEY', '').strip()
           
-          print(f"--- RUNNER PYTHON DEBUG START (v2.7.0) ---")
-          print(f"Environment Check: Key Length={len(ais_key)}, RunID={run_id}")
+          print(f"--- RUNNER PYTHON DEBUG START (v2.8.0) ---")
+          print(f"Goal: Inject secret into dist/index.html")
+          print(f"Input: SecretLength={len(ais_key)}")
           
           if not ais_key:
-              print("!! ERROR: AIS_KEY is MISSING in Python environment !!")
+              print("!! ERROR: AIS_KEY is MISSING in environment !!")
               exit(1)
           
           config_payload = {
               'AISSTREAM_API_KEY': ais_key,
               'nptUser': os.environ.get('NPT_USER', ''),
               'nptPass': os.environ.get('NPT_PASS', ''),
-              'FERRY_MMSI': '238690000',
-              'ENABLE_REAL_AIS': True,
               'isProduction': True,
+              'ENABLE_REAL_AIS': True,
+              'FERRY_MMSI': '238690000',
               'urls': { 'npt': 'https://b2b.promet-info.hr' }
           }
           
@@ -70,31 +71,30 @@ jobs:
               content = f.read()
           
           marker = '/* INJECT_PROD_CONFIG_SYNC */'
-          sync_code = f'window.LOCAL_CONFIG = {json.dumps(config_payload)}; console.info("🚢 LIVE: Config Injected (v2.7.0) [ID: {run_id}]");'
+          # Force the payload to be a single line of valid JS
+          payload_js = json.dumps(config_payload)
+          sync_code = f'window.LOCAL_CONFIG = {payload_js}; console.info("🚢 LIVE: Config Injected (v2.8.0)");'
           
-          print(f"Target Marker: {marker}")
+          print(f"Search: Looking for marker '{marker}' in content...")
           if marker in content:
-              print(f"✓ Marker found. Replacing with payload...")
+              print(f"✓ Match: Found marker. Replacing...")
               new_content = content.replace(marker, sync_code)
               with open('dist/index.html', 'w') as f:
                   f.write(new_content)
-              print(f"✓ WRITE SUCCESS: Payload length {len(sync_code)}")
               
-              # Final verification of the dist file
+              # FINAL AUDIT: Read it back and print the exact line to the logs
               with open('dist/index.html', 'r') as f:
-                  final_check = f.read()
-              if sync_code in final_check:
-                  print(f"✓ VERIFICATION PASSED: Payload exists in dist/index.html")
-              else:
-                  print("!! FATAL: Validation failed - payload missing from file after write !!")
-                  exit(1)
+                  lines = f.readlines()
+                  for i, line in enumerate(lines):
+                      if 'prod-config' in line:
+                          print(f"✓ AUDIT: Line {i+1} found: {line.strip()[:150]}...")
+                          break
+              print(f"--- RUNNER PYTHON DEBUG END (v2.8.0) ---")
           else:
-              print(f"!! ERROR: Target marker NOT FOUND in dist/index.html !!")
-              print("--- START OF INDEX.HTML (v2.7.0 SNIPPET) ---")
-              print(content[content.find('<script'):content.find('</script>')+200]) # Snippet around script tags
-              print("--- END OF SNIPPET ---")
+              print(f"!! FATAL: Marker '{marker}' not found in dist/index.html !!")
+              print("Snippet of file context:")
+              print(content[content.find('prod-config')-50:content.find('prod-config')+150])
               exit(1)
-          print(f"--- RUNNER PYTHON DEBUG END (v2.7.0) ---")
           EOF
           
           python3 inject_config.py
