--- a/.github/workflows/data-sync.yml
+++ b/.github/workflows/data-sync.yml
@@ -66,7 +66,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: 'chore: sync traffic/weather/ais data'
-          file_pattern: 'data/traffic*.json data/traffic*.js data/ais-snapshot.json'
+          file_pattern: 'data/traffic*.json data/traffic*.js data/ais-snapshot.json config.local.js'
 
 
   sync-sea-quality:
