--- a/.github/workflows/data-sync.yml
+++ b/.github/workflows/data-sync.yml
@@ -62,6 +62,12 @@ jobs:
           pwsh -File ./scripts/process-data.ps1
         continue-on-error: true
 
+      - name: Prepare Commit (Pull & Rebase)
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git pull --rebase --autostash origin main
+
       - name: Commit Traffic Data
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
