--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,7 @@
     "browser": true,
     "es2021": true
   },
-  "extends": [
-    "eslint:recommended"
-  ],
+  "extends": ["eslint:recommended"],
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module"
@@ -20,5 +18,16 @@
         "allowEmptyCatch": true
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["bundle.js"],
+      "rules": {
+        "no-unused-vars": "off",
+        "no-console": "off",
+        "no-undef": "off",
+        "no-redeclare": "off"
+      }
+    }
+  ]
 }
