--- a/.github/workflows/data-sync.yml
+++ b/.github/workflows/data-sync.yml
@@ -49,12 +49,12 @@ jobs:
           pwsh -File ./scripts/sync-raw-data.ps1
         continue-on-error: true
 
-#      - name: Fetch AIS Snapshot (Real-Time)
-#        env:
-#          AISSTREAM_API_KEY: ${{ secrets.AISSTREAM_API_KEY }}
-#        run: |
-#          node scripts/sync-ais-snapshot.js
-#        continue-on-error: true
+      #      - name: Fetch AIS Snapshot (Real-Time)
+      #        env:
+      #          AISSTREAM_API_KEY: ${{ secrets.AISSTREAM_API_KEY }}
+      #        run: |
+      #          node scripts/sync-ais-snapshot.js
+      #        continue-on-error: true
 
       - name: Fetch Cameras (once)
         run: |
@@ -65,8 +65,6 @@ jobs:
         run: |
           pwsh -File ./scripts/process-data.ps1
         continue-on-error: true
-
-
 
       - name: Prepare Commit (Pull & Rebase)
         run: |
@@ -80,9 +78,9 @@ jobs:
           commit_message: 'chore: sync traffic/weather/ais data'
           file_pattern: 'data/traffic*.json data/traffic*.js data/ais-snapshot.json'
 
-
   sync-sea-quality:
     runs-on: ubuntu-latest
+    needs: sync-data
     if: github.event_name == 'schedule' && github.event.schedule == '0 6 * * *'
     steps:
       - uses: actions/checkout@v4
